plugins {
    id 'java-library'
    id 'groovy'
    id 'maven-publish'
    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
}

allprojects {
    group = 'com.github.kaylves'
    version = '1.0.0-SNAPSHOT'

    repositories {
        mavenLocal()
        maven { url 'https://maven.aliyun.com/repository/public' }
        mavenCentral()
        maven { url 'https://repo.spring.io/milestone' }
    }
}

nexusPublishing {
    repositories {
        sonatype {
            nexusUrl = uri("https://s01.oss.sonatype.org/service/local/")
            snapshotRepositoryUrl = uri("https://s01.oss.sonatype.org/content/repositories/snapshots/")
            username = findProperty("ossrhUsername") ?: System.getenv("OSSRH_USERNAME") ?: ""
            password = findProperty("ossrhPassword") ?: System.getenv("OSSRH_PASSWORD") ?: ""
        }
    }
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'groovy'
    apply from: "${rootDir}/gradle/publish-mavencentral.gradle"

    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8

    ext {
        springBootVersion = '2.7.18'
        junitJupiterVersion = '5.9.3'
        mockitoVersion = '4.11.0'
        assertjVersion = '3.24.2'
        spockVersion = '2.3-groovy-4.0'
        groovyVersion = '4.0.15'
        testcontainersVersion = '1.19.3'
        mybatisSpringBootVersion = '2.3.2'
        rocketmqSpringBootVersion = '2.2.3'
        wiremockVersion = '2.35.1'
        jacksonVersion = '2.15.3'
        lombokVersion = '1.18.30'
    }

    dependencies {
        testImplementation "org.junit.jupiter:junit-jupiter:${junitJupiterVersion}"
        testImplementation "org.assertj:assertj-core:${assertjVersion}"
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.9.3'
    }

    tasks.withType(Test) {
        useJUnitPlatform()
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }
}
